2002-07-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/index.texi: Add pointers to new regression and
	test documents.

	* Documentation/user/converters.itely:
	Documentation/user/invoking.itexi: Some small fixes for uniform
	usage example.

	* input/allfontsize.ly, size*.ly: New files, moved from
	input/regression.
	
	* input/font20.ly, font-body.ly: New files, moved from input/test.
	
	* input/font*.ly: New files, moved from input/test.

	* input/test/*.ly: Remove empty files, fix broken ones.

	* input/test/different-time-signatures.ly: Add FIXME marker;
	comment-out broken code.

	* Documentation/regression-test.tely: Comment-out, add
	obsolete-marker and url to regression-test-dir.

	* input/test/GNUmakefile: 
	* input/regression/GNUmakefile: Add rule for lys-to-tely.py.

	* input/regression/+.ly:
	* input/test/+.ly: New file.

	* input/test/cue-notes.ly: better example

	* Documentation/user/refman.itely (Font selection): font size doco

	* input/mutopia/F.Schubert/standchen.ly: note bugfix

	* lily/stem.cc: rewrite of scoring to give sane results on knee
	beams.

	* lily/beam.cc (set_stem_lengths): extend stems for gapped tremolo
	beams.
	(connect_beams): chop off beaming outside the beam. Fixes problem
	with tremolo beams.

	* lily/score-engraver.cc (initialize): error if feta20.afm

2002-07-19  Han-Wen  <hanwen@cs.uu.nl>

	* scm/engraver-documentation-lib.scm
	(document-property-operation): add properties to context
	documentation.

	* scm/documentation-lib.scm (pad-string-to): align info menus.

2002-07-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* debian/GNUmakefile: Remove lilypond.links.
	
	* debian/: Debian patch (Anthony Fok).
	
	* debian/lilypond.links: Remove, as per Anthony's request.

	* aclocal.m4: Regenerate.
	
	* stepmake/aclocal.m4: Add --with-kpathsea-include,
	--with-kpathsea-lib options.

	* scripts/mup2ly.py: Cut-n-paste include missing lilylib.

	* stepmake/stepmake/compile-vars.make: 